Update dependency to mastercard-api-client==2.0.3
- Changed from mastercard_api_core>=1.4.0,<1.5.0 to mastercard-api-client==2.0.3
- Updated all packaging files (setup.py, setup.cfg, pyproject.toml)
- Bumped version to 1.0.7

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = mastercard_match
-version = 1.0.6
+version = 1.0.7
 description = MasterCard API Python SDK
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -31,7 +31,7 @@ classifiers =
 packages = find:
 python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
 install_requires =
-    mastercard_api_core>=1.4.0,<1.5.0
+    mastercard-api-client==2.0.3
 
 [options.packages.find]
 exclude =
