--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "mastercard_match"
-version = "1.0.6"
+version = "1.0.7"
 description = "MasterCard API Python SDK"
 readme = "README.md"
 license = {text = "BSD"}
@@ -34,7 +34,7 @@ classifiers = [
 ]
 requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*"
 dependencies = [
-    "mastercard_api_core>=1.4.0,<1.5.0"
+    "mastercard-api-client==2.0.3"
 ]
 
 [project.urls]
