feat: Add full Python 3 compatibility and drop Python 2.7 support
BREAKING CHANGE: Drop Python 2.7 support (end-of-life January 1, 2020)

Major changes:
- Fix critical string concatenation bug in exception messages (operationUUI -> operationUUID)
- Update minimum Python version requirement to 3.8+
- Modernize package configuration (setup.py, setup.cfg, pyproject.toml)
- Optimize dictionary operations for Python 3
- Relax mastercard-api-client dependency constraint (>=2.0.3)

Added:
- CHANGELOG.md with detailed migration guide
- requirements.txt for easier dependency management
- Python 3 compatibility verification scripts
- Enhanced README.md with Python 3 information
- .gitignore for better project hygiene

Fixed:
- String concatenation NameError in all API classes
- Dictionary membership testing in ResourceConfig

This release ensures full compatibility with Python 3.8+ and
modern Python development practices.

Version: 1.0.8

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = mastercard_match
-version = 1.0.7
+version = 1.0.8
 description = MasterCard API Python SDK
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -15,23 +15,20 @@ classifiers =
     License :: OSI Approved :: BSD License
     Natural Language :: English
     Operating System :: OS Independent
-    Programming Language :: Python :: 2
-    Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.5
-    Programming Language :: Python :: 3.6
-    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
     Topic :: Software Development :: Libraries :: Python Modules
 
 [options]
 packages = find:
-python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
+python_requires = >=3.8
 install_requires =
-    mastercard-api-client==2.0.3
+    mastercard-api-client>=2.0.3
 
 [options.packages.find]
 exclude =
